fix header and content text overlap when scrolling

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,6 +5,11 @@
   left: 0;
   z-index: 10;
 
+  &.active {
+    background: rgba($color: #000000, $alpha: 0.15);
+    backdrop-filter: blur(10px);
+  }
+
   .nav_container {
     position: relative;
     max-width: 1224px;
